--- a/packages/themes/src/material/tabs.css
+++ b/packages/themes/src/material/tabs.css
@@ -21,7 +21,7 @@
    ============================================================================= */
 
 [data-style='material'] [data-tabs-trigger] {
-  @apply text-ink-soft rounded-t-lg bg-transparent;
+  @apply text-ink-mute rounded-t-lg bg-transparent;
 }
 
 [data-style='material'] [data-tabs][data-position='after'] [data-tabs-trigger] {
@@ -69,7 +69,7 @@
    ============================================================================= */
 
 [data-style='material'] [data-tabs-trigger] [data-tabs-icon] {
-  @apply text-ink-soft;
+  @apply text-ink-mute;
 }
 
 [data-style='material'] [data-tabs-trigger]:hover:not(:disabled) [data-tabs-icon] {
