--- a/packages/themes/src/zen-sumi/tabs.css
+++ b/packages/themes/src/zen-sumi/tabs.css
@@ -62,7 +62,7 @@
 }
 
 [data-style='zen-sumi'] [data-tabs-trigger]:hover:not(:disabled) [data-tabs-icon] {
-  @apply text-ink-soft;
+  @apply text-ink-mute;
 }
 
 [data-style='zen-sumi'] [data-tabs-trigger][data-selected] [data-tabs-icon] {
